<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView   android:id="@+id/txtTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menuPrincipal"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:textAlignment="center"
        android:textSize="30dp"/>
    <Button    android:id="@+id/btn1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/btnTiempo"
        android:onClick="ejercicio1"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txtTitulo"/>
    <Button    android:id="@+id/btn2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/btnAtomico"
        android:onClick="ejercicio2"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn1"/>
    <Button    android:id="@+id/btn3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/btnMultimedia"
        android:onClick="ejercicio3"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn2"/>
    <Button    android:id="@+id/btn4"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/btnSalir"
        android:textSize="20dp"
        android:onClick="exit"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
