<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView   android:id="@+id/tituloAtomico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtAtomico"/>
    <EditText   android:id="@+id/txtElemento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tituloAtomico"/>
    <Button     android:id="@+id/btnInformacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnInformacion"
        android:onClick="datosElemento"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txtElemento"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/btnInformacion">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtSimbolo"
                android:textColor="#0000ee"
                android:textStyle="bold"/>
            <TextView   android:id="@+id/txtSimbolo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtNumero"
                android:textColor="#0000ee"
                android:textStyle="bold"/>
            <TextView   android:id="@+id/txtNumero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtPeso"
                android:textColor="#0000ee"
                android:textStyle="bold"/>
            <TextView   android:id="@+id/txtPeso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtPunto"
                android:textColor="#0000ee"
                android:textStyle="bold"/>
            <TextView   android:id="@+id/txtPunto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtDensidad"
                android:textColor="#0000ee"
                android:textStyle="bold"/>
            <TextView   android:id="@+id/txtDensidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/btnVolver"
        android:onClick="volver"/>

</RelativeLayout>
